# esp-lib-utils

./: .codespellrc  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  esp_utils_conf.h  esp_utils_config.h  idf_component.yml  library.properties  micropython.cmake
.github/workflows/: build_test.yml  check_lib_versions.yml  pre-commit.yml
src/: esp_utils_conf_kconfig.h  esp_utils_config_internal.h  esp_utils_config_kconfig.h  esp_utils_library.h  esp_utils_types.h  esp_utils_versions.h
src/check/: esp_utils_check.h
src/log/: esp_utils_log.c  esp_utils_log.h  esp_utils_log.hpp
src/log/impl/: esp_utils_log_impl.c  esp_utils_log_impl_esp.h  esp_utils_log_impl_std.h
src/memory/: esp_utils_mem.c  esp_utils_mem.cpp  esp_utils_mem.h  esp_utils_mem_cxx_general.hpp  esp_utils_mem_cxx_global.cpp  esp_utils_mem_cxx_global.h  esp_utils_memory.c  esp_utils_memory.h
src/memory/allocation/: esp_utils_mem_esp.h
src/more/: esp_utils_plugin_registry.hpp
src/thread/: esp_utils_thread.cpp  esp_utils_thread.hpp
test_apps/: CMakeLists.txt  sdkconfig.defaults
test_apps/main/: CMakeLists.txt  test_app_main.cpp  test_on_c.c  test_on_cpp.cpp  test_plugin.cpp  test_plugin_class_1.cpp  test_plugin_class_2.cpp  test_plugin_class_base.hpp
tools/: check_file_version.py
